[gd_scene load_steps=8 format=2]

[ext_resource path="res://PlaySpace.gd" type="Script" id=1]
[ext_resource path="res://Asset/back/MonsterBack.png" type="Texture" id=2]
[ext_resource path="res://Asset/frame.png" type="Texture" id=3]
[ext_resource path="res://icon.png" type="Texture" id=4]
[ext_resource path="res://DeckDraw.gd" type="Script" id=5]

[sub_resource type="InputEventAction" id=1]
action = "card"

[sub_resource type="ShortCut" id=2]
shortcut = SubResource( 1 )

[node name="PlaySpace" type="Node2D"]
script = ExtResource( 1 )

[node name="CardSlots" type="Node2D" parent="."]
position = Vector2( 52, -18 )

[node name="Deck" type="Node2D" parent="."]
position = Vector2( 1156, 414 )

[node name="DeckDraw" type="TextureButton" parent="Deck"]
margin_left = -123.0
margin_top = -277.0
margin_right = 183.0
margin_bottom = 192.0
rect_scale = Vector2( 0.4, 0.4 )
rect_pivot_offset = Vector2( 153, 234 )
shortcut = SubResource( 2 )
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 2 )
texture_hover = ExtResource( 2 )
texture_disabled = ExtResource( 3 )
script = ExtResource( 5 )

[node name="Cards" type="Node2D" parent="."]

[node name="CardsOnStage" type="Node2D" parent="."]

[node name="CardStage" type="Sprite" parent="."]
position = Vector2( 594.5, 345.75 )
scale = Vector2( 5.77451, 0.436034 )
texture = ExtResource( 3 )

[node name="CardBacks" type="Node2D" parent="."]

[node name="UI" type="CanvasLayer" parent="."]

[node name="Restart" type="Button" parent="UI"]
anchor_left = 0.894
anchor_top = 0.308
anchor_right = 0.894
anchor_bottom = 0.308
margin_left = -38.3201
margin_top = -34.76
margin_right = 37.6799
margin_bottom = 35.24
icon = ExtResource( 4 )

[node name="Quit" type="Button" parent="UI"]
anchor_left = 0.131
anchor_top = 0.153
anchor_right = 0.131
anchor_bottom = 0.153
margin_left = -37.68
margin_top = -35.16
margin_right = 38.32
margin_bottom = 34.84
text = "QUIT"
icon = ExtResource( 4 )

[connection signal="pressed" from="UI/Restart" to="." method="_on_Restart_pressed"]
[connection signal="pressed" from="UI/Quit" to="." method="_on_Quit_pressed"]
